<resources>
    <string name="app_name">Nesti_mes_recettes</string>
    <string name="txt_main_title">Choissiez une catégorie</string>
    <string name="txt_btn_easy">Facile à faire</string>
    <string name="txt_btn_traditionel">Traditionelles</string>
    <string name="txt_btn_season">C\'est de saison</string>
    <string name="txt_btn_gluten">Sans gluten</string>
    <string name="txt_menu_search">Rechercher une recette</string>
    <string name="txt_menu_liste">Liste des courses</string>
    <string name="txt_menu_present">Présentation</string>
    <string name="txt_menu_contact">Contact</string>
    <string name="txt_menu_team">Equipe</string>
    <string name="txt_menu_projet">Projet</string>
    <string name="txt_title_easy">Liste des recettes faciles</string>
    <string name="txt_title_traditionelle">Liste des recettes traditionelles</string>
    <string name="txt_title_saison">Liste des recettes saisones</string>
    <string name="txt_title_gluten">Liste des recettes sans gluten</string>
    <string name="txt_title_recipe">Titre</string>
    <string name="txt_title_author">Author</string>
    <string name="line_recipe_txtView_title">Titre</string>
    <string name="line_recipe_txtView_author">auteur</string>
    <string name="line_recipe_imgView_recipe">Image de recette</string>
    <string name="line_recipe_imgView_recipe_star">Image de recette star</string>
    <string name="txt_placeholder_recipe_name">nom d’une recette</string>
    <string name="txt_subtitle_search">Quel recette chercher vous?</string>
    <string name="txt_title_search">Rechercher</string>
    <string name="txt_btn_ok">Ok</string>
    <string name="txt_title_result">Résultats de recherche</string>
    <string name="txt_to_fill">Recette</string>
    <string name="txt_btn_voir">Voir</string>
    <string name="recette">Recette</string>
    <string name="lineRecipe_txtViewCat">category</string>
    <string name="lineRecipe_txtViewTemps_detail">temps</string>
    <string name="lineRecipe_txtViewPerso_detail">nombrePersonne</string>
    <string name="Presentation_txtTextVew_title">Presentation</string>
</resources>