<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContraintLayout"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <TextView
        android:id="@+id/lineRecipe_txtViewTitle_search"
        android:layout_width="282dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/line_recipe_txtView_title"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lineRecipe_imgViewRecipeStar"
        android:layout_width="192dp"
        android:layout_height="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/line_recipe_imgView_recipe_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lineRecipe_txtViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="44dp"
        android:text="@string/line_recipe_txtView_author"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lineRecipe_txtViewPerso_detail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lineRecipe_txtViewTemps_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lineRecipe_txtViewTemps_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lineRecipe_txtViewCat_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="84dp"
        android:text="@string/lineRecipe_txtViewCat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/lineRecipe_imgViewRecipe"
        android:layout_width="363dp"
        android:layout_height="117dp"
        android:contentDescription="@string/line_recipe_imgView_recipe"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/lineRecipe_txtViewPerso_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="279dp"
        android:text="@string/lineRecipe_txtViewPerso_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineRecipe_txtViewCat_detail"
        app:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>