<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <TextView
        android:id="@+id/lineRecipe_txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="68dp"
        android:text="@string/line_recipe_txtView_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lineRecipe_txtViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/line_recipe_txtView_author"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/lineRecipe_txtViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/lineRecipe_txtViewTitle" />

    <ImageView
        android:id="@+id/lineRecipe_imgViewRecipe"
        android:layout_width="184dp"
        android:layout_height="113dp"
        android:contentDescription="@string/line_recipe_imgView_recipe"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

</androidx.constraintlayout.widget.ConstraintLayout>