<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/main_btn_easy"
        android:layout_width="320dp"
        android:layout_height="126dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_btn_easy"
        android:textSize="30sp"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_traditionel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_txtViewTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/main_btn_season"
        android:layout_width="317dp"
        android:layout_height="116dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="18dp"
        android:text="@string/txt_btn_season"
        android:textSize="30sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_gluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_traditionel" />

    <Button
        android:id="@+id/main_btn_traditionel"
        android:layout_width="318dp"
        android:layout_height="124dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txt_btn_traditionel"
        android:textSize="30sp"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_season"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_easy" />

    <Button
        android:id="@+id/main_btn_gluten"
        android:layout_width="321dp"
        android:layout_height="119dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/txt_btn_gluten"
        android:textSize="30sp"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_season" />

</androidx.constraintlayout.widget.ConstraintLayout>